feat: deploy command (#18)
Adds a `deploy` command which can be used to provision a Noumena Engine
with NPL sources. Updates to JDK 24 and the new reachability metadata
format (hence the diff size).

Ticket: ST-4528