@@ -6,7 +6,7 @@
 
     <groupId>com.noumenadigital.platform</groupId>
     <artifactId>npl-cli</artifactId>
-    <version>2025.1.3</version>
+    <version>2025.1.3-1</version>
 
     <name>NPL CLI</name>
     <description>NPL CLI is a command-line tool designed to interact with the NPL Runtime and NOUMENA Cloud</description>
@@ -50,6 +50,7 @@
         <slf4j.version>2.0.16</slf4j.version>
         <main.class>com.noumenadigital.npl.cli.MainKt</main.class>
         <swagger-parser-v3.version>2.1.26</swagger-parser-v3.version>
+        <mockwebserver.version>4.12.0</mockwebserver.version>
     </properties>
 
     <dependencies>
@@ -62,6 +63,11 @@
         <dependency>
             <groupId>com.noumenadigital.platform</groupId>
             <artifactId>npl-api</artifactId>
+            <version>${platform.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.noumenadigital.platform</groupId>
+            <artifactId>clients</artifactId>
             <version>${platform.version}</version>
         </dependency>
         <dependency>
@@ -120,8 +126,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>${mockwebserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
+            <artifactId>kotlin-test-junit</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
@@ -183,7 +195,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading -Dkotest.framework.classpath.scanning.autoscan.disable=true</argLine>
+                    <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
                     <includes>
                         <include>**/*Test.*</include>
                     </includes>
@@ -205,6 +217,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
                             <includes>
                                 <include>**/*Test.*</include>
                                 <include>**/IT*.*</include>
@@ -242,8 +255,7 @@
                         <configuration>
                             <imageName>npl-${project.version}</imageName>
                             <buildArgs>
-                                <buildArg>--strict-image-heap</buildArg>
-                                <buildArg>--enable-sbom</buildArg>
+                                <buildArg>--exact-reachability-metadata</buildArg>
                             </buildArgs>
                             <mainClass>${main.class}</mainClass>
                         </configuration>
@@ -289,6 +301,7 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
                             <includes>
                                 <include>**/IT*.*</include>
                                 <include>**/*IT.*</include>
@@ -334,36 +347,12 @@
                         </executions>
                     </plugin>
 
-                    <!-- Run with native-image-agent -->
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>${exec-maven-plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>generate-native-configs</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <executable>java</executable>
-                                    <arguments>
-                                        <argument>-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image</argument>
-                                        <argument>-cp</argument>
-                                        <argument>${project.build.directory}/npl-cli-jar-with-dependencies.jar</argument>
-                                        <argument>${main.class}</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
                     <!-- Run unit tests with proper modes -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
                             <includes>
                                 <include>**/*Test.*</include>
                             </includes>
@@ -388,6 +377,7 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <argLine>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</argLine>
                             <includes>
                                 <include>**/IT*.*</include>
                                 <include>**/*IT.*</include>
